--- a/src/Pikot.Wintermute/Pikot.Wintermute.Domain/Pikot.Wintermute.Domain.csproj
+++ b/src/Pikot.Wintermute/Pikot.Wintermute.Domain/Pikot.Wintermute.Domain.csproj
@@ -7,7 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
+      <PackageReference Include="Paramore.Brighter" Version="9.9.8" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Agent\" />
+      <Folder Include="Node\" />
+      <Folder Include="User\" />
+      <Folder Include="Project\" />
     </ItemGroup>
 
 </Project>
